plugins {
    id 'java'
    id 'org.springframework.boot' version '2.7.14'
    id 'io.spring.dependency-management' version '1.0.15.RELEASE'
}

group = 'net.simforge.fsremotecontrol'
version = '0.0.1'

java {
    sourceCompatibility = '1.8'
}

repositories {
    mavenCentral()
    mavenLocal()
    maven {
        url 'https://mymavenrepo.com/repo/9k6aQjU4o2RPUv5zfolv/' // simforge repo read url
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
}
